src/lib/odata-parser.ts
let parser = /*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function() {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  let buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options?) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(first, rest) {
              return buildTree(first, rest, function(result, element) {
                return {
                  type: 'LogicalExpression',
                  operator: '||',
                  left:  result,
                  right: element[1]
                };
              });
            },
        peg$c1 = function(first, rest) {
              return buildTree(first, rest, function(result, element) {
                return {
                  type: 'LogicalExpression',
                  operator: '&&',
                  left: result,
                  right: element[1]
                };
              });
            },
        peg$c2 = function(first, rest) {
              return buildTree(first, rest, function(result, element) {
                let map = { 'eq': '==', 'ne': '!=' }
                
                return {
                  type: 'RelationalExpression',
                  operator: map[element[0][0].toLowerCase()],
                  left:  result,
                  right: element[1]
                };
              });
            },
        peg$c3 = function(first, rest) {
              return buildTree(first, rest, function(result, element) {
              	let map = { 'le': '<=', 'ge': '>=', 'lt': '<', 'gt': '>' }
          
                return {
                  type: 'RelationalExpression',
                  operator: map[element[0][0].toLowerCase()],
                  left:  result,
                  right: element[1]
                };
              });
            },
        peg$c4 = function(first, rest) {
              return buildTree(first, rest, function(result, element) {
              	let map = { 'add': '+', 'sub': '-' }
              
                return {
                  type: 'BinaryExpression',
                  operator: map[element[0][0].toLowerCase()],
                  left:  result,
                  right: element[1]
                };
              });
            },
        peg$c5 = function(first, rest) {
              return buildTree(first, rest, function(result, element) {
                let map = { 'mul': '*', 'div': '/', 'mod': '%' }
                
                return {
                  type: 'BinaryExpression',
                  operator: map[element[0][0].toLowerCase()],
                  left:  result,
                  right: element[1]
                };
              });
            },
        peg$c6 = function(operator, operand) {
              return operand.type === 'NumberLiteral' && (operator === '-' || operator === '+')
                ? 
                { 
                  type: 'NumberLiteral', 
                  value: (operator === '-' ? operator : '') + operand.value
                }
                :
                {
                  type: 'UnaryExpression', 
                  operator: operator, 
                  argument:  operand
                };
            },
        peg$c7 = function(expr) { return expr; },
        peg$c8 = function(qual, expr) { 
              return { 
            	type: 'ArrayExpression', 
                array: qual, 
                index: expr 
              };
            },
        peg$c9 = function(qual, args) { 
              return {
              	type: 'CallExpression', 
                object: qual,
                arguments: args
              };
            },
        peg$c10 = function(first, i) { return i; },
        peg$c11 = function(first, list) { 
              if(list) {
                return {
                  type: 'MemberExpression',
                  object: first,
                  property: list
                }
              }
              return first;
            },
        peg$c12 = function(op) { 
            	let map = { 'not': '!', '+': '+', '-': '-' }
            	return map[op[0].toLowerCase()]; 
            },
        peg$c13 = function(first, rest) { return buildList(first, rest, 1); },
        peg$c14 = function(args) { return args || []; },
        peg$c15 = function(exp) { return exp; },
        peg$c16 = /^[ \t\r\n\f]/,
        peg$c17 = peg$classExpectation([" ", "\t", "\r", "\n", "\f"], false, false),
        peg$c18 = function(first, last) { return { type: 'Identifier', name: first + last.join('') }; },
        peg$c19 = /^[a-z]/,
        peg$c20 = peg$classExpectation([["a", "z"]], false, false),
        peg$c21 = /^[A-Z]/,
        peg$c22 = peg$classExpectation([["A", "Z"]], false, false),
        peg$c23 = /^[_$]/,
        peg$c24 = peg$classExpectation(["_", "$"], false, false),
        peg$c25 = /^[0-9]/,
        peg$c26 = peg$classExpectation([["0", "9"]], false, false),
        peg$c27 = "true",
        peg$c28 = peg$literalExpectation("true", false),
        peg$c29 = function() { return { type: 'BooleanLiteral', value: true }; },
        peg$c30 = "false",
        peg$c31 = peg$literalExpectation("false", false),
        peg$c32 = function() { return { type: 'BooleanLiteral', value: false }; },
        peg$c33 = "null",
        peg$c34 = peg$literalExpectation("null", false),
        peg$c35 = function() { return { type: 'NullLiteral' }; },
        peg$c36 = function(literal) { return literal; },
        peg$c37 = /^[lL]/,
        peg$c38 = peg$classExpectation(["l", "L"], false, false),
        peg$c39 = function() { return { type: 'NumberLiteral', value: text() }; },
        peg$c40 = "0",
        peg$c41 = peg$literalExpectation("0", false),
        peg$c42 = /^[1-9]/,
        peg$c43 = peg$classExpectation([["1", "9"]], false, false),
        peg$c44 = /^[_]/,
        peg$c45 = peg$classExpectation(["_"], false, false),
        peg$c46 = "0x",
        peg$c47 = peg$literalExpectation("0x", false),
        peg$c48 = "0X",
        peg$c49 = peg$literalExpectation("0X", false),
        peg$c50 = "0b",
        peg$c51 = peg$literalExpectation("0b", false),
        peg$c52 = "0B",
        peg$c53 = peg$literalExpectation("0B", false),
        peg$c54 = /^[01]/,
        peg$c55 = peg$classExpectation(["0", "1"], false, false),
        peg$c56 = /^[0-7]/,
        peg$c57 = peg$classExpectation([["0", "7"]], false, false),
        peg$c58 = ".",
        peg$c59 = peg$literalExpectation(".", false),
        peg$c60 = /^[fFdD]/,
        peg$c61 = peg$classExpectation(["f", "F", "d", "D"], false, false),
        peg$c62 = /^[eE]/,
        peg$c63 = peg$classExpectation(["e", "E"], false, false),
        peg$c64 = /^[+\-]/,
        peg$c65 = peg$classExpectation(["+", "-"], false, false),
        peg$c66 = /^[pP]/,
        peg$c67 = peg$classExpectation(["p", "P"], false, false),
        peg$c68 = /^[a-f]/,
        peg$c69 = peg$classExpectation([["a", "f"]], false, false),
        peg$c70 = /^[A-F]/,
        peg$c71 = peg$classExpectation([["A", "F"]], false, false),
        peg$c72 = "'",
        peg$c73 = peg$literalExpectation("'", false),
        peg$c74 = /^['\\\n\r]/,
        peg$c75 = peg$classExpectation(["'", "\\", "\n", "\r"], false, false),
        peg$c76 = peg$anyExpectation(),
        peg$c77 = function(chars) { return { type: 'Literal', value: chars.map(l => l[0] == undefined ? l[1] : l[0] + l[1]).join('') } },
        peg$c78 = "\\",
        peg$c79 = peg$literalExpectation("\\", false),
        peg$c80 = /^[btnfr"'\\]/,
        peg$c81 = peg$classExpectation(["b", "t", "n", "f", "r", "\"", "'", "\\"], false, false),
        peg$c82 = /^[0-3]/,
        peg$c83 = peg$classExpectation([["0", "3"]], false, false),
        peg$c84 = "u",
        peg$c85 = peg$literalExpectation("u", false),
        peg$c86 = "add",
        peg$c87 = peg$literalExpectation("add", true),
        peg$c88 = "and",
        peg$c89 = peg$literalExpectation("and", true),
        peg$c90 = ":",
        peg$c91 = peg$literalExpectation(":", false),
        peg$c92 = ",",
        peg$c93 = peg$literalExpectation(",", false),
        peg$c94 = "div",
        peg$c95 = peg$literalExpectation("div", true),
        peg$c96 = "/",
        peg$c97 = peg$literalExpectation("/", false),
        peg$c98 = "eq",
        peg$c99 = peg$literalExpectation("eq", true),
        peg$c100 = "ge",
        peg$c101 = peg$literalExpectation("ge", true),
        peg$c102 = "gt",
        peg$c103 = peg$literalExpectation("gt", true),
        peg$c104 = "-",
        peg$c105 = peg$literalExpectation("-", false),
        peg$c106 = "[",
        peg$c107 = peg$literalExpectation("[", false),
        peg$c108 = "le",
        peg$c109 = peg$literalExpectation("le", true),
        peg$c110 = "(",
        peg$c111 = peg$literalExpectation("(", false),
        peg$c112 = "lt",
        peg$c113 = peg$literalExpectation("lt", true),
        peg$c114 = "mod",
        peg$c115 = peg$literalExpectation("mod", true),
        peg$c116 = "ne",
        peg$c117 = peg$literalExpectation("ne", true),
        peg$c118 = "not",
        peg$c119 = peg$literalExpectation("not", true),
        peg$c120 = "or",
        peg$c121 = peg$literalExpectation("or", true),
        peg$c122 = "+",
        peg$c123 = peg$literalExpectation("+", false),
        peg$c124 = "]",
        peg$c125 = peg$literalExpectation("]", false),
        peg$c126 = ")",
        peg$c127 = peg$literalExpectation(")", false),
        peg$c128 = "sub",
        peg$c129 = peg$literalExpectation("sub", true),
        peg$c130 = "mul",
        peg$c131 = peg$literalExpectation("mul", true),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$resultsCache = {},

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0;

      var key    = peg$currPos * 63 + 0,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$parseLogicalOrExpression();

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseLogicalOrExpression() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 63 + 1,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseLogicalAndExpression();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$currPos;
        s5 = peg$parseOROR();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse__();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseLogicalAndExpression();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$currPos;
          s5 = peg$parseOROR();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseLogicalAndExpression();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseLogicalAndExpression() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 63 + 2,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseEqualityExpression();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$currPos;
        s5 = peg$parseANDAND();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse__();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseEqualityExpression();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$currPos;
          s5 = peg$parseANDAND();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseEqualityExpression();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseEqualityExpression() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 63 + 3,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }

      s0 = peg$currPos;
      s1 = peg$parseRelationalExpression();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$currPos;
        s4 = peg$currPos;
        s5 = peg$parseEQUAL();
        if (s5 !== peg$FAILED) {
          s6 = peg$parse__();
          if (s6 !== peg$FAILED) {
            s5 = [s5, s6];
            s4 = s5;
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        } else {
          peg$currPos = s4;
          s4 = peg$FAILED;
        }
        if (s4 === peg$FAILED) {
          s4 = peg$currPos;
          s5 = peg$parseNOTEQUAL();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parseRelationalExpression();
          if (s5 !== peg$FAILED) {
            s4 = [s4, s5];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$currPos;
          s4 = peg$currPos;
          s5 = peg$parseEQUAL();
          if (s5 !== peg$FAILED) {
            s6 = peg$parse__();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          if (s4 === peg$FAILED) {
            s4 = peg$currPos;
            s5 = peg$parseNOTEQUAL();
            if (s5 !== peg$FAILED) {
              s6 = peg$parse__();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s4 !== peg$FAILED) {
            s5 = peg$parseRelationalExpression();
            if (s5 !== peg$FAILED) {
              s4 = [s4, s5];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c2(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

      return s0;
    }

    function peg$parseRelationalExpression() {
      var s0, s1, s2, s3, s4, s5, s6;

      var key    = peg$currPos * 63 + 4,
          cached = peg$resultsCache[key];

      if (cached) {
        peg$currPos = cached.nextPos;

        return cached.result;
      }
